--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@
     <script>
       // 特殊路径验证
       (function() {
-        const SECRET_PATH = 'admin-portal'; // 修改为你想要的特殊路径标识
+        const SECRET_PATH = '2026666'; // 修改为你想要的特殊路径标识
         const STORAGE_KEY = 'path_verified';
 
         // 检查是否已验证过（使用 sessionStorage，关闭浏览器后需重新验证）
