--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,21 @@
           // 检查 URL 中是否包含特殊路径参数
           const urlParams = new URLSearchParams(window.location.search);
           const pathKey = urlParams.get('access');
-          const hashKey = window.location.hash.substring(1).split('?')[0];
+
+          // 从 hash 中提取参数 (支持 #2026666 或 #/?access=2026666 或 #/login?access=2026666)
+          const hash = window.location.hash.substring(1); // 去掉 #
+          let hashKey = null;
+
+          // 如果 hash 直接就是密钥 (如 #2026666)
+          if (hash && !hash.includes('/') && !hash.includes('?')) {
+            hashKey = hash;
+          } else if (hash.includes('?')) {
+            // 如果 hash 中包含参数 (如 #/?access=2026666)
+            const hashParams = new URLSearchParams(hash.split('?')[1]);
+            hashKey = hashParams.get('access');
+          }
+
+          console.log('pathKey:', pathKey, 'hashKey:', hashKey);
 
           // 验证访问密钥
           if (pathKey === SECRET_PATH || hashKey === SECRET_PATH) {
@@ -37,11 +51,17 @@
           } else {
             // 验证失败，显示错误信息并阻止访问
             document.getElementById('root').innerHTML = '<div style="display:flex;justify-content:center;align-items:center;height:100vh;font-family:sans-serif;flex-direction:column;"><h1>访问被拒绝</h1><p>需要特殊访问权限</p><p style="color:#888;font-size:12px;">Access Denied - Special Permission Required</p></div>';
-            throw new Error('访问路径验证失败');
+            // 停止脚本执行，不加载应用
+            return;
           }
         }
+
+        // 验证通过，动态加载应用脚本
+        const script = document.createElement('script');
+        script.type = 'module';
+        script.src = '/src/index.jsx';
+        document.body.appendChild(script);
       })();
     </script>
-    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
